--- a/modules/ROOT/pages/deployment/services/_special-envvar.adoc
+++ b/modules/ROOT/pages/deployment/services/_special-envvar.adoc
@@ -1,6 +1,6 @@
 ////
 special envvar are maintained manually as they cant be gathered by a automated process in the ocis repo.
-these envvars are rarely changed
+these envvars are rarely changed.
 when a new ocis version is set, we only need to change the reference (tag) at the caller but not the content
 when a content is created, we can fix this here and in env-vars-special-scope.adoc
 ////
@@ -35,6 +35,9 @@ tag::service_tab_2[]
 
 | `OCIS_EXCLUDE_RUN_SERVICES`
 | A comma-separated list of service names. Will start all default services except of the ones listed. Has no effect when `OCIS_RUN_SERVICES` is set.
+
+| `OCIS_ADD_RUN_SERVICES`
+| A comma-separated list of service names. Will add the listed services to the default configuration. Has no effect when `OCIS_RUN_SERVICES` is set. Note that one can add services not started by the default list and exclude services from the default list by using both envvars at the same time.
 |===
 
 Note to get the current list of services started by default, you need to run `ocis server` without restriction which services to load and afterwards `ocis list`.
