--- a/modules/ROOT/pages/deployment/container/orchestration/tab-pages/breaking-changes.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/tab-pages/breaking-changes.adoc
@@ -29,7 +29,7 @@ Please set them via the `secretRefs.s3CredentialsSecretRef` secret instead.
 `services.web.config.feedbackLink.enabled` = `false`
 
 * In order to persist the instance logo that can be changed via the Web UI, +
-`services.web.persistence.enabled` must be set to `false`. +
+`services.web.persistence.enabled` must be set to `true`. +
 In prior releases the web frontend did not have any persistence.
 
 [id=0.2.0]
