Apply suggestions from code review
language review

--- a/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
@@ -63,9 +63,9 @@ Once the custom service has finished its work, it should send an event of the ty
 
 == CLI Commands
 
-=== Resume Postprocessing
+=== Resume Post-Processing
 
-If postprocessing fails in one step due to an unforseen error, current uploads will not be retried automatically. Starting with Infinite Scale release 3.1, a system admin can instead run a CLI command to retry the failed upload which is a two step process:
+If post-processing fails in one step due to an unforeseen error, current uploads will not be retried automatically. Starting with Infinite Scale release 3.1, a system administrator can instead run a CLI command to retry the failed upload which is a two step process:
 
 * First, find the upload ID of the failed upload.
 +
@@ -74,7 +74,7 @@ If postprocessing fails in one step due to an unforseen error, current uploads w
 ocis storage-users uploads list
 ----
 
-* Then use the restart command to resume postprocessing of the ID selected.
+* Then use the restart command to resume post-processing of the ID selected.
 +
 [source,bash]
 ----
