--- a/modules/ROOT/pages/maintenance/commands/commands.adoc
+++ b/modules/ROOT/pages/maintenance/commands/commands.adoc
@@ -55,6 +55,6 @@ OPTIONS:
    --help, -h              show help
 ----
 
-== Resume Postprocessing
+== Resume Post-Processing
 
-If postprocessing fails in one step due to an unforseen error, current uploads will not be retried automatically. Starting with Infinite Scale release 3.1, a system admin can instead run a xref:{s-path}/postprocessing.adoc#resume-postprocessing[CLI command] to retry the failed upload.
+If post-processing fails in one step due to an unforseen error, current uploads will not be retried automatically. Starting with Infinite Scale release 3.1, a system administrator can instead run a xref:{s-path}/postprocessing.adoc#resume-postprocessing[CLI command] to retry the failed upload.
