--- a/modules/ROOT/pages/deployment/container/orchestration/tab-pages/breaking-changes.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/tab-pages/breaking-changes.adoc
@@ -17,6 +17,19 @@ For each breaking changes block you need:
 
 {description}
 
+[id=0.4.0]
+== Chart Version: 0.4.0
+
+The oCIS Chart 0.4.0 has received various improvements.
+
+Among them are following improvements:
+
+- It supports the update from the Helm Chart 0.1.0 by setting `services.storagesystem.persistence.claimName` to "storage-system-data" and "services.storageusers.persistence.claimName" to "storage-users-data" in order to mitigate the breaking changes from Helm Chart 0.2.0
+
+- It supports the auto-generation of secrets. You no longer need to generate them manually. If you already have secrets generated and configured via `extraResources`, you can just remove them from `extraResources`. If you applied the secrets manually to the Kubernetes cluster, they are not yet managed by Helm. Therefore you need to add the "app.kubernetes.io/managed-by", "meta.helm.sh/release-name" and "meta.helm.sh/release-namespace" annotations manually to each secret. The values of the annotations can be found on any other resource that was deployed by the oCIS chart.
+
+Please also check the changes for the Chart version 0.3.0 and 0.2.0 if you're planning to update from a Chart version 0.1.0
+
 [id=0.3.0]
 == Chart Version: 0.3.0
 
@@ -25,7 +38,7 @@ For each breaking changes block you need:
 have been deprecated. +
 Please set them via the `secretRefs.s3CredentialsSecretRef` secret instead.
 
-* If you had set `services.web.config.disableFeedbackLink` = `true`, you need to replace it by + 
+* If you had set `services.web.config.disableFeedbackLink` = `true`, you need to replace it by +
 `services.web.config.feedbackLink.enabled` = `false`
 
 * In order to persist the instance logo that can be changed via the Web UI, +
@@ -37,7 +50,9 @@ In prior releases the web frontend did not have any persistence.
 
 Note that Helm Chart Version `0.2.0` was a necessary intermediate for Infinite Scale `3.0.0-alpha.1` only and is listed for completion of breaking changes.
 
-Version 0.2.0 of the Helm Chart introduces some changes compared to version 0.1.0 with respect to the value names which align the service/app names at various places (values file, YAML files, directories).
+Version 0.2.0 of the Helm Chart introduces some changes compared to version 0.1.0 with respect to the naming of Persistent Volume Claim names of the storageusers and storagesystem services. Updating from 0.1.0 without manual update interventions will result in data loss.
+
+Also service/app names were aligned the at various places (values file, YAML files, directories).
 
 [width=100%,cols="~,~",options=header]
 |===
