--- a/modules/ROOT/pages/migration/upgrading-ocis.adoc
+++ b/modules/ROOT/pages/migration/upgrading-ocis.adoc
@@ -116,7 +116,7 @@ Because the proxy service is not running, no clients or users can login. During 
 {"level":"info","root":"/var/lib/ocis/storage/users","time":"2023-06-16T12:21:49.441395153Z","caller":"github.com/cs3org/reva/v2@v2.14.0/pkg/storage/utils/decomposedfs/migrator/0003_switch_to_messagepack_metadata.go:45","message":"Migrating to messagepack metadata backend..."}
 ----
 
-When migration has finished - which can take a while depending on the quantity of files - you can see a log message like the below:
+When migration has finished - which can take a while depending on the quantity of files - you can see a log message like below:
 
 [source,plaintext]
 ----
