Some service text cleanups

--- a/modules/ROOT/pages/deployment/services/s-list/app-provider.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/app-provider.adoc
@@ -1,6 +1,6 @@
 = App Provider Service Configuration
 :toc: right
-:description: App providers represent apps, if the app is not able to register itself. Currently there is only the CS3org WOPI server app provider.
+:description: App providers represent apps that are not able to register themselves. Currently there is only the CS3org WOPI server app provider.
 
 :service_name: app-provider
 
