--- a/modules/ROOT/pages/deployment/services/s-list/ocdav.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/ocdav.adoc
@@ -1,6 +1,6 @@
 = OCDAV Service Configuration
 :toc: right
-:description: The ocDAV service is responsible for translating ownCloud flavoured WebDAV into CS3 API calls. Note that previews (thumbnails) are provided by the xref:{s-path}/webdav.adoc[WebDAV service].
+:description: The ocDAV service is responsible for translating ownCloud-flavored WebDAV into CS3 API calls. Note that previews (thumbnails) are provided by the xref:{s-path}/webdav.adoc[WebDAV service].
 
 // references https://github.com/owncloud/ocis/pull/3864 ([docs-only] add PROPFIND sequence diagram examples)
 // also see: https://owncloud.dev/architecture/protocol-changes/ 
