--- a/modules/ROOT/pages/deployment/services/s-list/idm.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/idm.adoc
@@ -1,6 +1,6 @@
 = IDM Service Configuration
 :toc: right
-:description: The Infinite Scale IDM service provides a minimal LDAP Service for Infinite Scale. It is started as part of the runtime and serves as a central place for storing user and group information.
+:description: The Infinite Scale IDM service provides a minimal LDAP service for Infinite Scale. It is started as part of the runtime and serves as a central place for storing user and group information.
 
 :service_name: idm
 
