--- a/modules/ROOT/pages/depl-examples/bare-metal.adoc
+++ b/modules/ROOT/pages/depl-examples/bare-metal.adoc
@@ -241,6 +241,8 @@ Open a web browser, navigate to your Infinite Scale URL `\https://{ocis_url}` an
 
 == Apache as Reverse Proxy
 
+Note that you need to have the modules `mod_rewrite`, `mod_ssl` and `mod_Proxy` enabled.
+
 Always run a configuration test when updating your Apache configuration with:
 
 [source,bash]
