--- a/modules/ROOT/pages/migration/upgrading_2.0.0_3.0.0.adoc
+++ b/modules/ROOT/pages/migration/upgrading_2.0.0_3.0.0.adoc
@@ -1,6 +1,6 @@
 = Upgrading from 2.0.0 to 3.0.0
 :toc: right
-:description: This document desribes the necessary steps when upgrading Infinite Scale from release 2.0.0 to 3.0.0.
+:description: This document describes the necessary steps when upgrading Infinite Scale from release 2.0.0 to 3.0.0.
 
 == Introduction
 
@@ -78,7 +78,7 @@ the instance will stay at the configured backend when passing the next step.
 
 IMPORTANT: Though you can stay at the xattrs backend, it is highly recommended to migrate to messagepack as the xattrs backend is considered deprecated and will be removed soon.
 
-To enable migration, remove any of the manually configured environment variables listed above. This can be also done in a later step but it is highly recommended to migrate now.
+To enable migration, remove any of the manually configured environment variables listed above. This can also be done in a later step but it is highly recommended to migrate now.
 
 NOTE: If you want to prevent the migration for now, set `OCIS_DECOMPOSEDFS_METADATA_BACKEND=xattrs`.
 
@@ -86,7 +86,7 @@ IMPORTANT: Note that the migration of the metadata backend to messagepack is a o
 --
 
 . Migrate Metadata to Messagepack: +
-It is important to disable clients and users logging in while the migration to `messagepack` is in progress. To do so, start Infinite Scale with only two necessary services. The example uses the binary as base:
+It is important to disable clients and users logging in while the migration to `messagepack` is in progress. To do so, start Infinite Scale with only two necessary services. The following example uses the binary as base:
 +
 --
 [source,bash]
@@ -102,14 +102,14 @@ Because the proxy service is not running, no clients or users can login. During 
 {"level":"info","root":"/var/lib/ocis/storage/users","time":"2023-06-16T12:21:49.441395153Z","caller":"github.com/cs3org/reva/v2@v2.14.0/pkg/storage/utils/decomposedfs/migrator/0003_switch_to_messagepack_metadata.go:45","message":"Migrating to messagepack metadata backend..."}
 ----
 
-When migration has finished - which can take a while depending on the quantity of files - you can see a log message like below:
+When migration has finished - which can take a while depending on the quantity of files - you can see a log message like the one below:
 
 [source,plaintext]
 ----
 {"level":"info","time":"2023-06-16T12:30:05.267986656Z","caller":"github.com/cs3org/reva/v2@v2.14.0/pkg/storage/utils/decomposedfs/migrator/0003_switch_to_messagepack_metadata.go:106","message":"done."}`
 ----
 
-Finally start the Infinite Scale instance as usual.
+Finally, start the Infinite Scale instance as usual.
 --
 
 . Check your Instance +
